feat: add search logic for wine

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.data.elasticsearch.cluster-name=elasticsearch_brew
 spring.data.elasticsearch.cluster-nodes=elasticsearch_brew
+elasticsearch.wine.indices=wine_test
 server.port=8181
